--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
+
 *,
 *::after,
 *::before{
@@ -12,15 +14,24 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #f7e9dc;
+    font-family: 'DM Sans', sans-serif;
 }
 
 main{
     display: grid;
     grid-template-rows: 20% auto;
-    width: 30rem;
-    height: 40rem;
+    width: 29rem;
+    height: 38rem;
     border-radius: 20px;
     
+}
+
+hr{
+    height:1px;
+    opacity: 50%;
+    margin-top: 1.5rem;
+    background-color: rebeccapurple;
 }
 
 .main-balance{
@@ -32,6 +43,8 @@ main{
     background-color:  hsl(10, 79%, 65%);
     border-radius: 20px;
     justify-content: space-between;
+    color: white;
+    line-height: 2.3rem;
 }
 
 .main-balance-logo{
@@ -51,61 +64,89 @@ main{
     padding: 1rem;
     padding-left: 2rem;
     padding-right: 2rem;
-
-    background-color: white;
-    border: 1px solid black;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    background-color: #fffcf7;
+    /* background-color: white; */
+    /* border: 1px solid black; */
 }
 
 .main-spending-stats{
-    height: 70%;
+    height: 60%;
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto;
+    grid-template-columns: repeat(7, auto);
     align-items: flex-end;
+    text-align: center;
+    /* margin: 4rem; */
 }
 
-.main-spending-detail{
+.main-review{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 1.5rem;
-}
-
-.main-spending-datail-2{
-    display: flex;
-    align-items: flex-end;
-    flex-direction: column;
+    /* padding-bottom: 2rem; */
     /* background-color: rebeccapurple; */
 }
 
+.main-review-current h1{
+    font-size: 3rem;
+}
+
+.main-review-current p{
+    opacity: 80%;
+}
+
+.main-review-past{
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    line-height: 1.5rem;
+}
+
+.main-review-past span {
+    font-size: 20px;
+    font-weight: 700;
+}
+.main-review-past p {
+    opacity: 80%;
+}
+
+
+
 .main-box{
-    background-color: green;
+    background-color: hsl(10, 79%, 65%);
+    border-radius: 5px;
     cursor: pointer;
 }
 
-.boxContainer{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
+.main-box:hover{
+    opacity: 80%;
 }
 
-/* .main-box:hover{
-    background-color: black;
-} */
-.boxPrice{
 
+.boxPrice{
     visibility: hidden;
-    margin: auto;
-    padding: 5px;
-    background-color: rebeccapurple;
-    /* width: 70%; */
-    border-radius: 5px;
-    color: white;
+    font-size: 1.1rem;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 
 .boxPrice-active{
-    /* background-color: royalblue; */
     visibility: visible;
+    font-size: 1.1rem;
+    width: auto;
+    background-color: hsl(25, 47%, 15%);
+    margin-bottom: 1rem;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius: 3px;
+    color: white;
+}
+
+.boxPrice-highestPrice{
+     background-color: hsl(186, 34%, 60%);
 }
